Update2 index.html

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@ document.getElementById("telegramForm").addEventListener("submit", async functio
         if (response.ok) {
             alert('Сообщение успешно отправлено!');
         } else {
-            alert('Произошла ошибка при отправке сообщения.');
+            alert('Произошла ошибка при отправке сообщения111111.');
         }
     } catch (error) {
         console.error('Ошибка:', error);
-        alert('Произошла ошибка при отправке сообщения.');
+        alert('Произошла ошибка при отправке сообщения 223232.');
     }
 });    
 </script>
